# chess

./: .gitignore  .yarnrc.yml  README.md  _headers  build.js  cf-setup.js  package.json  tsconfig.json  webpack.config.js
.github/workflows/: main.yml  yarn.yml
chess-wasm/: .gitignore  Cargo.toml  README.md  index.js  package.json  webpack.config.js
chess-wasm/src/: lib.rs
frontend/: .gitignore  README.md  package.json  rollup.config.js
frontend/public/: index.html
frontend/src/: App.svelte
src/: App.svelte  chess.worker.ts  main.ts  styles.scss
src/chess-gen/: chess-gen-protocols.ts  chess-gen-shared.ts  chess-gen.ts  chess-gen.worker.ts
src/feature-check/: feature-check.ts
src/views/: Chess.svelte  FeatureError.svelte
static/: index.html
wasm/: Cargo.toml
wasm/src/: lib.rs
