[package]
name = "chess-wasm"
version = "0.0.1"
edition = "2021"
authors = ["harmless-tech"]
description = "A web version of chess."
readme = "../README.md"
homepage = "https://chess.harmless.tech/"
repository = "https://github.com/harmless-tech/chess"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.80"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }

# [dev-dependencies]
# wasm-bindgen-test = "0.3.30"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
